finish about and contact

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
   <section id="hero">
 
     <div class="hero-content" data-aos="fade-up">
-      <h2>Making <span>your ideas</span><br>happen!</h2>
+      <h2>Welcome to Yum! Japan</h2>
       <div>
-        <a href="#about" class="btn-get-started scrollto">Get Started</a>
+        <a href="#about" class="btn-get-started scrollto">View Menu</a>
         <a href="#portfolio" class="btn-projects scrollto">Our Projects</a>
       </div>
     </div>
@@ -130,15 +130,16 @@
           </div>
 
           <div class="col-lg-6 content">
-            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
-            <h3>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
-
+            <h2>About Us</h2>
+            <h3>Yum! Japan offers delicious tasting Japanese cuisine in Mid-Michigan. 
+              Our convenient location at the heart of Okemos inside Meridian Mall and affordable prices makes us a natural choice for dine-in or take-out meals in the Lansing area.</h3>
+              We are known for our:
             <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bi bi-check-circle"></i>Family-owned and operated business</li>
+              <li><i class="bi bi-check-circle"></i>High-quality, fresh ingredients</li>
+              <li><i class="bi bi-check-circle"></i>Friendly atmostphere and excellent service</li>
             </ul>
-
+            <h3>Come in and taste the difference, or find us on DoorDash!</h3>
           </div>
         </div>
 
@@ -337,7 +338,7 @@
     <section id="testimonials">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Testimonials</h2>
+          <h2>Customer Reviews</h2>
           <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
         </div>
 
@@ -520,23 +521,30 @@
             <div class="contact-address">
               <i class="bi bi-geo-alt"></i>
               <h3>Address</h3>
-              <address>A108 Adam Street, NY 535022, USA</address>
+              <address>1982 W Grand River Rd, Okemos, MI 48864<br>(Inside Meridian Mall Food Court)</address>
             </div>
           </div>
 
           <div class="col-md-4">
             <div class="contact-phone">
-              <i class="bi bi-phone"></i>
+              <i class="bi bi-telephone"></i>
               <h3>Phone Number</h3>
-              <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+              <p><a href="tel:+15173810888">(517) 381-0888</a></p>
             </div>
           </div>
 
           <div class="col-md-4">
             <div class="contact-email">
-              <i class="bi bi-envelope"></i>
-              <h3>Email</h3>
-              <p><a href="mailto:info@example.com">info@example.com</a></p>
+              <i class="bi bi-clock"></i>
+              <h3>Hours</h3>
+              <!-- <p>Mon: <span>10AM-9PM</span></p>
+              <p>Tue: <span>10AM-9PM</span></p>
+              <p>Wed: <span>10AM-9PM</span></p>
+              <p>Thu: <span>10AM-9PM</span></p>
+              <p>Fri: <span>10AM-9PM</span></p>
+              <p>Sat: <span>10AM-9PM</span></p> -->
+              <p>Mon, Tue, Wed, Thu, Fri, Sat: <span>10AM-9PM</span></p>
+              <p>Sun: <span>12PM-6PM</span></p>
             </div>
           </div>
 
@@ -544,7 +552,8 @@
       </div>
 
       <div class="container mb-4">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe> -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11723.843846369558!2d-84.418328!3d42.725717!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x72eaf4d63f1e428c!2sYum%20Japan!5e0!3m2!1sen!2sus!4v1629300707292!5m2!1sen!2sus" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
 
       <div class="container">
