--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -194,7 +194,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Clients Section ======= -->
-    <section id="clients">
+    <!-- <section id="clients">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Clients</h2>
@@ -216,7 +216,7 @@
         </div>
 
       </div>
-    </section><!-- End Clients Section -->
+    </section>End Clients Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
@@ -433,7 +433,7 @@
     </section><!-- End Call To Action Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team">
+    <!-- <section id="team">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Our Team</h2>
@@ -505,7 +505,7 @@
         </div>
 
       </div>
-    </section><!-- End Team Section -->
+    </section>End Team Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact">
@@ -556,7 +556,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11723.843846369558!2d-84.418328!3d42.725717!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x72eaf4d63f1e428c!2sYum%20Japan!5e0!3m2!1sen!2sus!4v1629300707292!5m2!1sen!2sus" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
 
-      <div class="container">
+      <!-- <div class="container">
         <div class="form">
           <form action="forms/contact.php" method="post" role="form" class="php-email-form">
             <div class="row">
@@ -584,7 +584,7 @@
           </form>
         </div>
 
-      </div>
+      </div> -->
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
