--- a/index.html
+++ b/index.html
@@ -146,11 +146,245 @@
       </div>
     </section><!-- End About Section -->
 
+    <!-- ======= Menu Section ======= -->
+    <section id="menu">
+      <div class="container" data-aos="fade-up">
+        <div class="section-header">
+          <h2>Menu</h2>
+        </div>
+
+        <div class="text-center">
+          <a id="1"></a><h3>SUSHI ROLLS</h3>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Avocado &amp; Cucumber</h4>
+              <span></span>
+              <span>5.29</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>California Roll</h4>
+              <span></span>
+              <span>5.99</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Chicken Teriyaki Roll</h4>
+              <span></span>
+              <span>5.99</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Salmon Roll (Raw)</h4>
+              <span></span>
+              <span>5.99</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Sushi Deluxe</h4>
+              <span></span>
+              <span>11.99</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="text-center">
+          <a id="2"></a><h3>SIDE ORDERS</h3>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Maki Roll</h4>
+              <span></span>
+              <span>1.19</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Crab Cheese</h4>
+              <span></span>
+              <span>1.19</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Fried Rice</h4>
+              <span></span>
+              <span>2.99</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Soba Noodle</h4>
+              <span></span>
+              <span>3.29</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Veggie Tofu</h4>
+              <span></span>
+              <span>3.99</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Dumplings (5 PCS)</h4>
+              <span></span>
+              <span>3.99</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Shrimp Tempura (3 PCS)</h4>
+              <span></span>
+              <span>5.29</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Miso Soup</h4>
+              <span></span>
+              <span>2.59</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="text-center">
+          <a id="2"></a><h3>TERIYAKI COMBOS</h3>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Chicken</h4>
+              <span></span>
+              <span>6.39</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Beef</h4>
+              <span></span>
+              <span>7.99</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Shrimp</h4>
+              <span></span>
+              <span>8.39</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Salmon</h4>
+              <span></span>
+              <span>8.99</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Chicken &amp; Shrimp</h4>
+              <span></span>
+              <span>9.79</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Beef &amp; Shrimp</h4>
+              <span></span>
+              <span>9.99</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Japanese Orange Chicken</h4>
+              <span></span>
+              <span>6.39</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Crispy Ginger Tofu</h4>
+              <span></span>
+              <span>6.39</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="text-center">
+          <a id="2"></a><h3>KIDS MEALS</h3>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Chicken Teriyaki</h4>
+              <span></span>
+              <span>4.99</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Japanese Orange Chicken</h4>
+              <span></span>
+              <span>4.99</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="text-center">
+          <a id="2"></a><h3>BEVERAGES</h3>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Soft Drink (Size M)</h4>
+              <span></span>
+              <span>1.89</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Soft Drink (Size L)</h4>
+              <span></span>
+              <span>2.19</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Hot Tea</h4>
+              <span></span>
+              <span>1.79</span>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="item">
+              <h4>Bottled Water</h4>
+              <span></span>
+              <span>1.79</span>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Menu Section -->
+
     <!-- ======= Services Section ======= -->
     <section id="services">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Services</h2>
+          <h2>Menu</h2>
           <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
         </div>
 
